# kafka-kraft-demo

./: README.md  docker-compose.yml  kafka-kraft-demo.code-workspace
bruno/KafkaKraft/: Consume message.bru  Publish message.bru  bruno.json
python/: __init__.py  config.yaml  pyproject.toml
python/src/: config.py  kafka_app.py  kafka_consumer.py  kafka_producer.py  kafka_producer_app.py  model.py
python/tests/: test_producer_config.py
